--- a/statetests.ini
+++ b/statetests.ini
@@ -17,10 +17,11 @@ testeth_docker_name = holiman/testeth
 
 [martin]
 
-clients = GETH,PAR,PY
+clients = GETH,PAR,PY,CPP
+#,PAR,PY
 docker_repo= holiman
 pyeth_docker_name = %(docker_repo)s/std-pyethvm
-cpp_docker_name   = %(docker_repo)s/std-cppvm
+cpp_docker_name   = %(docker_repo)s/testeth
 parity_docker_name= %(docker_repo)s/std-parityvm
 geth_docker_name  = %(docker_repo)s/std-gethvm
 tests_path=/data/workspace/tests
