run statetests on homestead

--- a/statetests.ini
+++ b/statetests.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
 
-fork_config = EIP158
+fork_config = Homestead
 clients = CPP,GETH,PAR,PY
 tests_path = /ethereum/tests
 prestate_tmp_file = prestate.json
