Fix bug setting fork config.  Point pyethereum dockerfile against ethereum/pyethereum#master

--- a/containers/pyethereum/Dockerfile
+++ b/containers/pyethereum/Dockerfile
@@ -4,9 +4,9 @@ FROM frolvlad/alpine-python3:latest
 RUN \
   apk add --update bash jq git curl python3-dev musl-dev gcc make openssl-dev   \
          bsd-compat-headers g++ autoconf automake pkgconfig libtool libffi-dev gmp-dev && \
-  curl -sSf https://bootstrap.pypa.io/get-pip.py -o get-pip.py              && \
+  curl -sSf https://bootstrap.pypa.io/get-pip.py -o get-pip.py               && \
   python3 get-pip.py                                                         && \
-  git clone --depth 1 https://github.com/cdetrio/pyethereum --branch evmlab-trace --single-branch && \
+  git clone --depth 1 https://github.com/ethereum/pyethereum                 && \
   cd pyethereum                                                              && \
   python3 setup.py install                                                   && \
   echo "{}"                                                                    \
