--- a/statetests.ini
+++ b/statetests.ini
@@ -1,22 +1,24 @@
 [DEFAULT]
 
-fork_config = Homestead
+fork_config = Byzantium
 clients = CPP,GETH,PAR,PY
 
 tests_path = /ethereum/tests
+random_tests = No
 prestate_tmp_file = prestate.json
 single_test_tmp_file = single_test_tmp.json
 logs_path = tracerLogs
 
 docker_repo= cdetrio
 pyeth_docker_name = %(docker_repo)s/pyethereum
-cpp_docker_name   = %(docker_repo)s/cpp-ethereum
-parity_docker_name= %(docker_repo)s/parity
-geth_docker_name  = %(docker_repo)s/geth
+cpp_docker_name   = %(docker_repo)s/std-cpp-ethereum
+parity_docker_name= %(docker_repo)s/std-parity
+geth_docker_name  = %(docker_repo)s/std-geth
 
 testeth_docker_name = holiman/testeth
 
 [martin]
+
 
 clients = GETH,PAR,PY,CPP
 #,PAR,PY
@@ -26,6 +28,6 @@ cpp_docker_name   = %(docker_repo)s/testeth
 parity_docker_name= %(docker_repo)s/std-parityvm
 geth_docker_name  = %(docker_repo)s/std-gethvm
 tests_path=/data/workspace/tests
-
+random_tests = Yes
 
 
