Don't save client traces when tests PASS

--- a/statetests.ini
+++ b/statetests.ini
@@ -1,13 +1,15 @@
 [DEFAULT]
 
 fork_config = Byzantium
-clients = CPP,GETH,PAR,PY
+#clients = CPP,GETH,PAR,PY
+clients = PY,PAR,GETH,CPP
 
 tests_path = /ethereum/tests
-random_tests = No
+random_tests = Yes
+#random_tests = No
 prestate_tmp_file = prestate.json
 single_test_tmp_file = single_test_tmp.json
-logs_path = tracerLogs
+logs_path = randoLogs
 
 docker_repo= cdetrio
 pyeth_docker_name = %(docker_repo)s/pyethereum
@@ -15,18 +17,18 @@ cpp_docker_name   = %(docker_repo)s/std-cpp-ethereum
 parity_docker_name= %(docker_repo)s/std-parity
 geth_docker_name  = %(docker_repo)s/std-geth
 
-testeth_docker_name = holiman/testeth
+testeth_docker_name = cdetrio/testeth
+
 
 [martin]
 
 
-clients = GETH,PAR,PY,CPP
-#,PAR,PY
-docker_repo= holiman
-pyeth_docker_name = %(docker_repo)s/std-pyethvm
-cpp_docker_name   = %(docker_repo)s/testeth
-parity_docker_name= %(docker_repo)s/std-parityvm
-geth_docker_name  = %(docker_repo)s/std-gethvm
+#clients = GETH,PAR,PY,CPP
+#docker_repo= holiman
+#pyeth_docker_name = %(docker_repo)s/std-pyethvm
+#cpp_docker_name   = %(docker_repo)s/testeth
+#parity_docker_name= %(docker_repo)s/std-parityvm
+#geth_docker_name  = %(docker_repo)s/std-gethvm
 tests_path=/data/workspace/tests
 random_tests = Yes
 
