--- a/statetests.ini
+++ b/statetests.ini
@@ -1,35 +1,32 @@
 [DEFAULT]
 
 fork_config = Byzantium
-#clients = CPP,GETH,PAR,PY
-clients = PY,PAR,GETH,CPP
+clients = parity,cpp,geth
 
 tests_path = /ethereum/tests
 random_tests = Yes
-#random_tests = No
 prestate_tmp_file = prestate.json
 single_test_tmp_file = single_test_tmp.json
 logs_path = randoLogs
 
-docker_repo= cdetrio
-pyeth_docker_name = %(docker_repo)s/pyethereum
-cpp_docker_name   = %(docker_repo)s/std-cpp-ethereum
-parity_docker_name= %(docker_repo)s/std-parity
-geth_docker_name  = %(docker_repo)s/std-geth
-
-testeth_docker_name = cdetrio/testeth
+py.docker_name     = cdetrio/pyethereum
+cpp.docker_name    = cdetrio/std-cpp-ethereum
+parity.docker_name = cdetrio/std-parity
+geth.docker_name   = cdetrio/std-geth
+testeth.docker_name = cdetrio/testeth
 
 
 [martin]
 
-
-#clients = GETH,PAR,PY,CPP
-#docker_repo= holiman
-#pyeth_docker_name = %(docker_repo)s/std-pyethvm
-#cpp_docker_name   = %(docker_repo)s/testeth
-#parity_docker_name= %(docker_repo)s/std-parityvm
-#geth_docker_name  = %(docker_repo)s/std-gethvm
-tests_path=/data/workspace/tests
-random_tests = Yes
+geth.binary        = ./bins/evm
 
 
+[devops]
+
+# The fuzzer server uses raw binaries
+# instead of docker images
+
+cpp.binary         = ./bins/testeth
+parity.binary      = ./bins/testeth
+geth.binary        = ./bins/evm
+testeth.binary     = ./bins/testeth
