--- a/statetests.ini
+++ b/statetests.ini
@@ -18,7 +18,7 @@ testeth.docker_name = cdetrio/testeth
 
 [martin]
 
-geth.binary        = ./bins/evm
+geth.binary        = /home/martin/go/src/github.com/ethereum/go-ethereum/build/bin/evm
 
 
 [devops]
@@ -26,7 +26,7 @@ geth.binary        = ./bins/evm
 # The fuzzer server uses raw binaries
 # instead of docker images
 
-cpp.binary         = ./bins/testeth
-parity.binary      = ./bins/testeth
-geth.binary        = ./bins/evm
-testeth.binary     = ./bins/testeth
+cpp.binary         = /datadrive/evmlab/containers/bins/testeth
+parity.binary      = /datadrive/evmlab/containers/bins/parity-evm
+geth.binary        = /datadrive/evmlab/containers/bins/evm
+testeth.binary     = /datadrive/evmlab/containers/bins/testeth
