add js docker image to config

--- a/statetests.ini
+++ b/statetests.ini
@@ -1,10 +1,10 @@
 [DEFAULT]
 
 fork_config = Byzantium
-clients = parity,cpp,geth
+clients = js,geth
 
 tests_path = /ethereum/tests
-random_tests = Yes
+random_tests = No
 prestate_tmp_file = prestate.json
 single_test_tmp_file = single_test_tmp.json
 logs_path = randoLogs
@@ -14,6 +14,7 @@ cpp.docker_name    = cdetrio/std-cpp-ethereum
 parity.docker_name = cdetrio/std-parity
 geth.docker_name   = cdetrio/std-geth
 testeth.docker_name = cdetrio/testeth
+js.docker_name = jwasinger/ethereumjs-vm
 
 
 [martin]
