--- a/containers/std-parity/Dockerfile
+++ b/containers/std-parity/Dockerfile
@@ -1,5 +1,5 @@
 # Docker container spec for building a parity branch for standardized vm traces
-FROM ubuntu:16.04
+FROM ubuntu:16.04 as builder
 
 # Build parity on the fly and delete all build tools afterwards
 RUN \
@@ -20,6 +20,11 @@ RUN cd parity && echo "{}"                                       \
   apt-get remove -y curl git make g++ gcc file binutils pkg-config openssl libssl-dev && \
   rm -rf /root/.cargo
 
+
+from ubuntu:16.04
+RUN apt-get -y update && apt-get install -y libssl-dev libudev-dev
+COPY --from=builder /parity-evm /parity-evm
+COPY --from=builder /version.json /version.json
 ADD . /
-ENTRYPOINT ["/parity-evm"]
+#ENTRYPOINT ["/parity-evm"]
 RUN cat version.json
