--- a/statetests.ini
+++ b/statetests.ini
@@ -1,13 +1,15 @@
 [DEFAULT]
 
 fork_config = Byzantium
-clients = js,geth
+clients = geth
 
-tests_path = /ethereum/tests
+tests_path = /tmp/testfiles
 random_tests = No
 prestate_tmp_file = prestate.json
 single_test_tmp_file = single_test_tmp.json
 logs_path = randoLogs
+
+mode=docker_daemon
 
 py.docker_name     = cdetrio/pyethereum
 cpp.docker_name    = cdetrio/std-cpp-ethereum
@@ -19,8 +21,10 @@ js.docker_name = jwasinger/ethereumjs-vm
 
 [martin]
 
-geth.binary        = /home/martin/go/src/github.com/ethereum/go-ethereum/build/bin/evm
-
+geth.docker_name  = ethereum/client-go:alltools-latest
+cpp.docker_name   = ethereum/client-cpp
+testeth.docker_name   = holiman/testeth
+#testeth.docker_name = cdetrio/testeth
 
 [devops]
 
