--- a/statetests.ini
+++ b/statetests.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 fork_config = Byzantium
-clients = geth
+clients = geth,parity
 
 tests_path = /tmp/testfiles
 random_tests = No
@@ -24,6 +24,7 @@ js.docker_name = jwasinger/ethereumjs-vm
 geth.docker_name  = ethereum/client-go:alltools-latest
 cpp.docker_name   = ethereum/client-cpp
 testeth.docker_name   = holiman/testeth
+parity.docker_name = holiman/parity
 #testeth.docker_name = cdetrio/testeth
 
 [devops]
