--- a/statetests.ini
+++ b/statetests.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 fork_config = Byzantium
-clients = geth,parity
+clients = geth,cpp
 
 tests_path = /tmp/testfiles
 random_tests = No
@@ -22,7 +22,7 @@ js.docker_name = jwasinger/ethereumjs-vm
 [martin]
 
 geth.docker_name  = ethereum/client-go:alltools-latest
-cpp.docker_name   = ethereum/client-cpp
+cpp.docker_name   = holiman/testeth
 testeth.docker_name   = holiman/testeth
 parity.docker_name = holiman/parity
 #testeth.docker_name = cdetrio/testeth
