--- a/statetests.ini
+++ b/statetests.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 fork_config = Byzantium
-clients = geth,cpp
+clients = geth,cpp,parity
 
 tests_path = /tmp/testfiles
 random_tests = No
