--- a/statetests.ini
+++ b/statetests.ini
@@ -11,20 +11,21 @@ logs_path = randoLogs
 
 mode=docker_daemon
 
-py.docker_name     = cdetrio/pyethereum
-cpp.docker_name    = cdetrio/std-cpp-ethereum
-parity.docker_name = cdetrio/std-parity
-geth.docker_name   = cdetrio/std-geth
-testeth.docker_name = cdetrio/testeth
+geth.docker_name  = ethereum/client-go:alltools-latest
+cpp.docker_name   = holiman/testeth
+testeth.docker_name   = holiman/testeth
+parity.docker_name = holiman/parity
+
+#py.docker_name     = cdetrio/pyethereum
+#cpp.docker_name    = cdetrio/std-cpp-ethereum
+#parity.docker_name = cdetrio/std-parity
+#geth.docker_name   = cdetrio/std-geth
+#testeth.docker_name = cdetrio/testeth
 js.docker_name = jwasinger/ethereumjs-vm
 
 
 [martin]
 
-geth.docker_name  = ethereum/client-go:alltools-latest
-cpp.docker_name   = holiman/testeth
-testeth.docker_name   = holiman/testeth
-parity.docker_name = holiman/parity
 #testeth.docker_name = cdetrio/testeth
 
 [devops]
@@ -32,7 +33,7 @@ parity.docker_name = holiman/parity
 # The fuzzer server uses raw binaries
 # instead of docker images
 
-cpp.binary         = /datadrive/evmlab/containers/bins/testeth
-parity.binary      = /datadrive/evmlab/containers/bins/parity-evm
-geth.binary        = /datadrive/evmlab/containers/bins/evm
-testeth.binary     = /datadrive/evmlab/containers/bins/testeth
+#cpp.binary         = /datadrive/evmlab/containers/bins/testeth
+#parity.binary      = /datadrive/evmlab/containers/bins/parity-evm
+#geth.binary        = /datadrive/evmlab/containers/bins/evm
+#testeth.binary     = /datadrive/evmlab/containers/bins/testeth
