update config to use common branches of clients

--- a/statetests.ini
+++ b/statetests.ini
@@ -11,12 +11,17 @@ logs_path = randoLogs
 
 mode=docker_daemon
 
-py.docker_name     = cdetrio/pyethereum
-cpp.docker_name    = cdetrio/std-cpp-ethereum
-parity.docker_name = cdetrio/std-parity
-geth.docker_name   = cdetrio/std-geth
-testeth.docker_name = cdetrio/testeth
-js.docker_name = jwasinger/ethereumjs-vm
+eth.docker_name     = ethereum/client-go:alltools-latest
+cpp.docker_name     = holiman/testeth
+testeth.docker_name = holiman/testeth
+parity.docker_name  = holiman/parity
+
+#py.docker_name     = cdetrio/pyethereum
+#cpp.docker_name    = cdetrio/std-cpp-ethereum
+#parity.docker_name = cdetrio/std-parity
+#geth.docker_name   = cdetrio/std-geth
+#testeth.docker_name = cdetrio/testeth
+#js.docker_name = jwasinger/ethereumjs-vm
 
 
 [martin]
