--- a/statetests.ini
+++ b/statetests.ini
@@ -11,7 +11,7 @@ logs_path = randoLogs
 
 mode=docker_daemon
 
-eth.docker_name     = ethereum/client-go:alltools-latest
+geth.docker_name     = ethereum/client-go:alltools-latest
 cpp.docker_name     = holiman/testeth
 testeth.docker_name = holiman/testeth
 parity.docker_name  = holiman/parity
