add hera to evmlab

--- a/statetests.ini
+++ b/statetests.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 fork_config = Byzantium
-clients = geth,cpp,parity
+clients = geth,hera
 
 tests_path = /tmp/testfiles
 random_tests = Yes
