don't default to running preexisting state test suite

--- a/statetests.ini
+++ b/statetests.ini
@@ -4,7 +4,7 @@ fork_config = Byzantium
 clients = geth,cpp,parity
 
 tests_path = /tmp/testfiles
-random_tests = No
+random_tests = Yes
 prestate_tmp_file = prestate.json
 single_test_tmp_file = single_test_tmp.json
 logs_path = randoLogs
