--- a/containers/hera/Dockerfile
+++ b/containers/hera/Dockerfile
@@ -17,7 +17,7 @@ RUN curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash - && \
         python
 
 #RUN git clone --recursive https://github.com/ethereum/cpp-ethereum --branch develop --single-branch --depth 1
-RUN git clone https://github.com/ethereum/cpp-ethereum --branch ewasm --single-branch
+RUN git clone https://github.com/ethereum/cpp-ethereum --branch ewasm-json-trace --single-branch
 RUN cd cpp-ethereum && git submodule update --init
 RUN cd cpp-ethereum/hera && git fetch origin && git checkout evm-trace
 
@@ -39,7 +39,7 @@ RUN cd build && make -j8
 RUN cd build && make install
 
 # RUN ln -s $(which python3) /usr/bin/python
-RUN git clone --recursive https://github.com/jwasinger/evm2wasm -b charge-by-evm-op --single-branch && \
+RUN git clone --recursive https://github.com/jwasinger/evm2wasm -b charge-by-evm-op-enabled --single-branch && \
           cd evm2wasm && \
           npm install && \
           cd tools/wabt && \
