reset config to not use hera/cpp by default

--- a/statetests.ini
+++ b/statetests.ini
@@ -1,21 +1,20 @@
 [DEFAULT]
 
 fork_config = Byzantium
-clients = geth,hera
+clients = geth,cpp,parity
 
 tests_path = /tmp/testfiles
-random_tests = Yes
+random_tests = No
 prestate_tmp_file = prestate.json
 single_test_tmp_file = single_test_tmp.json
 logs_path = randoLogs
 
 mode=docker_daemon
 
-geth.docker_name     = ethereum/client-go:alltools-latest
+eth.docker_name     = ethereum/client-go:alltools-latest
 cpp.docker_name     = holiman/testeth
 testeth.docker_name = holiman/testeth
 parity.docker_name  = holiman/parity
-hera.docker_name = holiman/hera
 
 #py.docker_name     = cdetrio/pyethereum
 #cpp.docker_name    = cdetrio/std-cpp-ethereum
@@ -31,7 +30,6 @@ geth.docker_name  = ethereum/client-go:alltools-latest
 cpp.docker_name   = holiman/testeth
 testeth.docker_name   = holiman/testeth
 parity.docker_name = holiman/parity
-
 #testeth.docker_name = cdetrio/testeth
 
 [devops]
