parity require hash in poststate

--- a/statetests.ini
+++ b/statetests.ini
@@ -1,21 +1,15 @@
 [DEFAULT]
 
 fork_config = Byzantium
-clients = geth
+clients = parity
 
 artefacts = ~/tmp/evmlab/artefacts/
 tests_path = /tmp/evmlabtemp/
-random_tests = Yes
-prestate_tmp_file = prestate.json
-single_test_tmp_file = single_test_tmp.json
-logs_path = randoLogs
-
-mode=docker_daemon
 
 geth.docker_name     = ethereum/client-go:alltools-latest
 cpp.docker_name     = holiman/testeth
 testeth.docker_name = holiman/testeth
-parity.docker_name  = holiman/parity
+parity.docker_name  = holiman/parityvm
 hera.docker_name = holiman/hera
 
 #py.docker_name     = cdetrio/pyethereum
@@ -31,7 +25,6 @@ hera.docker_name = holiman/hera
 geth.docker_name  = ethereum/client-go:alltools-latest
 cpp.docker_name   = holiman/testeth
 testeth.docker_name   = holiman/testeth
-parity.docker_name = holiman/parity
 
 #testeth.docker_name = cdetrio/testeth
 
