fuzzer: add web interface to fuzzer

--- a/statetests.ini
+++ b/statetests.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 fork_config = Byzantium
-clients = parity
+clients = geth,parity
 
 artefacts = ~/tmp/evmlab/artefacts/
 tests_path = /tmp/evmlabtemp/
