--- a/statetests.ini
+++ b/statetests.ini
@@ -4,7 +4,7 @@ fork_config = Byzantium
 clients = geth,parity
 
 artefacts = ~/tmp/evmlab/artefacts/
-tests_path = /tmp/evmlabtemp/
+tests_path = /datadrive/evmlabtemp/
 
 geth.docker_name     = ethereum/client-go:alltools-latest
 cpp.docker_name     = holiman/testeth
