make smartcodegenerators configurable via statetests.ini

--- a/statetests.ini
+++ b/statetests.ini
@@ -28,3 +28,44 @@ testeth.docker_name   = holiman/testeth
 
 #testeth.docker_name = cdetrio/testeth
 
+
+[codegen]
+# Codegenerator settings
+engine.RndCodeBytes.enabled = true
+engine.RndCodeInstr.enabled = true
+engine.RndCodeSmart2.enabled = true
+
+## probabilities for each codegen to be chosen
+engine.RndCodeBytes.weight = 5
+engine.RndCodeInstr.weight = 25
+engine.RndCodeSmart2.weight = 70
+
+# [[RndCodeSmart2]]
+# special settings for
+#engine.RndCodeSmart2.min_gas = 100
+#engine.RndCodeSmart2.generator = RndCodeGenGauss
+#engine.RndCodeSmart2.length = 800
+
+## fixes likelyhood  (0 = disabled)
+engine.RndCodeSmart2.fixes.fix_stack_arguments.p = 995 # of 1000
+engine.RndCodeSmart2.fixes.fix_jumps.p = 995
+engine.RndCodeSmart2.fixes.fix_stack_balance.p = 950
+
+## Mutation probabilities
+### instruction mutator
+engine.RndCodeSmart2.mutate.instructions.p = 10
+engine.RndCodeSmart2.mutate.instructions.max_amount = 3 # random(1, max_amount)
+
+engine.RndCodeSmart2.mutate.instructions.randomize_operand.weight = 60
+engine.RndCodeSmart2.mutate.instructions.drop_item.weight = 10
+engine.RndCodeSmart2.mutate.instructions.dup_instruction.weight = 20
+engine.RndCodeSmart2.mutate.insert_random_instructions.weight = 10
+
+# byte mutator
+engine.RndCodeSmart2.mutate.bytecode.p = 1
+engine.RndCodeSmart2.mutate.bytecode.max_amount = 3 # random(1, max_amount)
+
+engine.RndCodeSmart2.mutate.bytecode.randomize_operand.weight = 50
+engine.RndCodeSmart2.mutate.bytecode.drop_item.weight = 10
+engine.RndCodeSmart2.mutate.bytecode.dup_instruction.weight = 20
+engine.RndCodeSmart2.mutate.bytecode.weight = 20
