moved configuration to inifile (with default settings if not available) fuzzer - pass configuration to rndcodegen

--- a/statetests.ini
+++ b/statetests.ini
@@ -42,30 +42,37 @@ engine.RndCodeSmart2.weight = 70
 
 # [[RndCodeSmart2]]
 # special settings for
-#engine.RndCodeSmart2.min_gas = 100
+engine.RndCodeSmart2.min_gas = 100
 #engine.RndCodeSmart2.generator = RndCodeGenGauss
+
+# fix code length to a specific value. otherwise take random length value from distribution
 #engine.RndCodeSmart2.length = 800
 
-## fixes likelyhood  (0 = disabled)
-engine.RndCodeSmart2.fixes.fix_stack_arguments.p = 995 # of 1000
-engine.RndCodeSmart2.fixes.fix_jumps.p = 995
+## probabilities
+# 0 = disabled
+# values are x/1000. i.e. 99 ^== 9.9 %
+engine.RndCodeSmart2.fixes.fix_stack_arguments.p = 995
 engine.RndCodeSmart2.fixes.fix_stack_balance.p = 950
+# not yet configurable
+# engine.RndCodeSmart2.fixes.fix_jumps.p = 995
 
 ## Mutation probabilities
 ### instruction mutator
 engine.RndCodeSmart2.mutate.instructions.p = 10
-engine.RndCodeSmart2.mutate.instructions.max_amount = 3 # random(1, max_amount)
+# random(1, max_amount)
+engine.RndCodeSmart2.mutate.instructions.max_amount = 3
 
 engine.RndCodeSmart2.mutate.instructions.randomize_operand.weight = 60
 engine.RndCodeSmart2.mutate.instructions.drop_item.weight = 10
 engine.RndCodeSmart2.mutate.instructions.dup_instruction.weight = 20
-engine.RndCodeSmart2.mutate.insert_random_instructions.weight = 10
+engine.RndCodeSmart2.mutate.instructions.insert_random_instructions.weight = 10
 
 # byte mutator
 engine.RndCodeSmart2.mutate.bytecode.p = 1
-engine.RndCodeSmart2.mutate.bytecode.max_amount = 3 # random(1, max_amount)
+# random(1, max_amount)
+engine.RndCodeSmart2.mutate.bytecode.max_amount = 3
 
 engine.RndCodeSmart2.mutate.bytecode.randomize_operand.weight = 50
-engine.RndCodeSmart2.mutate.bytecode.drop_item.weight = 10
-engine.RndCodeSmart2.mutate.bytecode.dup_instruction.weight = 20
-engine.RndCodeSmart2.mutate.bytecode.weight = 20
+engine.RndCodeSmart2.mutate.bytecode.insert_random_bytes.weight = 10
+engine.RndCodeSmart2.mutate.bytecode.drop_byte.weight = 20
+engine.RndCodeSmart2.mutate.bytecode.switch_random.weight = 20
