add config engine.RndCodeInstr.smartCodeProbability.p

--- a/statetests.ini
+++ b/statetests.ini
@@ -40,6 +40,10 @@ engine.RndCodeBytes.weight = 5
 engine.RndCodeInstr.weight = 25
 engine.RndCodeSmart2.weight = 70
 
+# [[RndCodeInstr]]
+# 99.0%
+engine.RndCodeInstr.smartCodeProbability.p = 990
+
 # [[RndCodeSmart2]]
 # special settings for
 engine.RndCodeSmart2.min_gas = 100
