make distribution configurable

--- a/statetests.ini
+++ b/statetests.ini
@@ -48,6 +48,7 @@ engine.RndCodeInstr.smartCodeProbability.p = 990
 # special settings for
 engine.RndCodeSmart2.min_gas = 100
 #engine.RndCodeSmart2.generator = RndCodeGenGauss
+#engine.RndCodeSmart2.distribution = EVM_CATEGORY
 
 # fix code length to a specific value. otherwise take random length value from distribution
 #engine.RndCodeSmart2.length = 800
