expose more settings to ini

--- a/statetests.ini
+++ b/statetests.ini
@@ -29,6 +29,30 @@ testeth.docker_name   = holiman/testeth
 #testeth.docker_name = cdetrio/testeth
 
 
+[statetest]
+info.comment = evmlab statetest 
+
+#env.difficulty = 0x20000
+#env.gaslimit = 0x1312D00
+#env.number = 1
+#env.timestamp = 1000
+#env.coinbase = 0x...address
+#env.previousHash = 0x..address
+
+# max and min random storage slots to generate for prestates
+#prestate.storage.random.slots.min = 0
+#prestate.storage.random.slots.max = 2
+
+#prestate.random.code.length.min = 50
+#prestate.random.code.length.max = 500
+
+# transaction gas limit
+#transaction.gaslimit.random.min = 476000
+#transaction.value.random.min = 0
+#transaction.value.random.max = 16777216
+
+
+
 [codegen]
 # Codegenerator settings
 engine.RndCodeBytes.enabled = true
@@ -38,11 +62,13 @@ engine.RndCodeSmart2.enabled = true
 ## probabilities for each codegen to be chosen
 engine.RndCodeBytes.weight = 5
 engine.RndCodeInstr.weight = 25
-engine.RndCodeSmart2.weight = 70
+engine.RndCodeSmart2.weight = 75
 
 # [[RndCodeInstr]]
 # 99.0%
 engine.RndCodeInstr.smartCodeProbability.p = 990
+## this is the default length to be generated. might be overriden by prestate.random.code.length.min/max
+#engine.RndCodeInstr.default.length = 50
 
 # [[RndCodeSmart2]]
 # special settings for
