use precompiles from rndaddress and add a method to import them (add_precompiled_prestates) add logger keep track of number of fill rounds rework autofill to make code regeneration behavior configurable   allow to specify when to renew the prestate in tx.to   allow to specify when to renew other prestates for addresses we are adding    as it does not make sense to always regenerate the code as we are not sure    if we are always hitting it. exclude precompiled addresses from add_prestate_from_stack_arguments exclude tx.to from add_prestates_from_stack_arguments add configuration options to statestes.ini     prestate.txto.renew.every.x.rounds = 1     prestate.other.renew.every.x.rounds = 1     prestate.other.renew.limit.per.round = 0

--- a/statetests.ini
+++ b/statetests.ini
@@ -46,6 +46,13 @@ info.comment = evmlab statetest
 #prestate.random.code.length.min = 50
 #prestate.random.code.length.max = 500
 
+## performance: prestate regeneration behavior
+# renew.every.x.rounds  ... 1 = always
+# renew.limit.per.round ... max number of existing prestates to regenerate in a round. 0 = all
+#prestate.txto.renew.every.x.rounds = 1
+#prestate.other.renew.every.x.rounds = 1
+#prestate.other.renew.limit.per.round = 0
+
 # transaction gas limit
 #transaction.gaslimit.random.min = 476000
 #transaction.value.random.min = 0
