enable constantinoplefix fuzzing

--- a/statetests.ini
+++ b/statetests.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
 
-fork_config = Constantinople
+fork_config = ConstantinopleFix
 clients = geth,parity
 
 artefacts = ~/tmp/evmlab/artefacts/
